--- a/src/features/LangSwitcher/LangSwitcher.module.scss
+++ b/src/features/LangSwitcher/LangSwitcher.module.scss
@@ -2,3 +2,12 @@
   padding: 0;
   line-height: 1.5;
 }
+
+.langSwitcherRedesigned {
+  width: 32px;
+  padding: 0;
+  font-weight: bold;
+  font-size: 22px;
+  line-height: 32px;
+  color: var(--icon-redesigned);
+}
