--- a/src/features/ThemeSwitcher/ui/ThemeSwitcher.module.scss
+++ b/src/features/ThemeSwitcher/ui/ThemeSwitcher.module.scss
@@ -15,3 +15,20 @@
   width: 24px;
   height: 24px;
 }
+
+// redesigned
+
+.switcherRedesigned {
+  border: 0;
+  margin: 0;
+  padding: 6px;
+  font-size: 0;
+  background: none;
+  cursor: pointer;
+}
+
+.iconRedesigned {
+  width: 20px;
+  height: 20px;
+  fill: var(--icon-redesigned);
+}
