--- a/src/widgets/Sidebar/ui/SidebarToggle/SidebarToggle.module.scss
+++ b/src/widgets/Sidebar/ui/SidebarToggle/SidebarToggle.module.scss
@@ -16,3 +16,55 @@
   width: 40px !important;
   height: 40px !important;
 }
+
+// redesigned
+
+.sidebarToggleRedesigned {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+
+  :global(.app_theme_light) & {
+    cursor: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='13' fill='none' viewBox='0 0 8 13'%3E%3Cpath fill='%235ED3F3' d='M7.226.863a1 1 0 0 0-1.414-.02L.794 5.723a.998.998 0 0 0-.301.777.998.998 0 0 0 .3.777l5.02 4.88a1 1 0 1 0 1.393-1.434L2.863 6.5l4.343-4.223a1 1 0 0 0 .02-1.414z'/%3E%3C/svg%3E"), w-resize;
+  }
+
+  :global(.app_theme_dark) & {
+    cursor: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='13' fill='none' viewBox='0 0 8 13'%3E%3Cpath fill='%2374A2B2' d='M7.226.863a1 1 0 0 0-1.414-.02L.794 5.723a.998.998 0 0 0-.301.777.998.998 0 0 0 .3.777l5.02 4.88a1 1 0 1 0 1.393-1.434L2.863 6.5l4.343-4.223a1 1 0 0 0 .02-1.414z'/%3E%3C/svg%3E"), w-resize;
+  }
+
+  :global(.app_theme_colored) & {
+    cursor: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='13' fill='none' viewBox='0 0 8 13'%3E%3Cpath fill='%234875F0' d='M7.226.863a1 1 0 0 0-1.414-.02L.794 5.723a.998.998 0 0 0-.301.777.998.998 0 0 0 .3.777l5.02 4.88a1 1 0 1 0 1.393-1.434L2.863 6.5l4.343-4.223a1 1 0 0 0 .02-1.414z'/%3E%3C/svg%3E"), w-resize;
+  }
+}
+
+.collapsedRedesigned {
+  justify-content: center;
+
+  :global(.app_theme_light) & {
+    cursor: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='13' fill='none' viewBox='0 0 8 13'%3E%3Cpath fill='%235ED3F3' d='M.774.863a1 1 0 0 1 1.414-.02l5.018 4.88a.998.998 0 0 1 .301.777.998.998 0 0 1-.3.777l-5.02 4.88a1 1 0 1 1-1.393-1.434L5.137 6.5.794 2.277A1 1 0 0 1 .774.863z'/%3E%3C/svg%3E"), e-resize;
+  }
+
+  :global(.app_theme_dark) & {
+    cursor: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='13' fill='none' viewBox='0 0 8 13'%3E%3Cpath fill='%2374A2B2' d='M.774.863a1 1 0 0 1 1.414-.02l5.018 4.88a.998.998 0 0 1 .301.777.998.998 0 0 1-.3.777l-5.02 4.88a1 1 0 1 1-1.393-1.434L5.137 6.5.794 2.277A1 1 0 0 1 .774.863z'/%3E%3C/svg%3E"), e-resize;
+  }
+
+  :global(.app_theme_colored) & {
+    cursor: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='13' fill='none' viewBox='0 0 8 13'%3E%3Cpath fill='%234875F0' d='M.774.863a1 1 0 0 1 1.414-.02l5.018 4.88a.998.998 0 0 1 .301.777.998.998 0 0 1-.3.777l-5.02 4.88a1 1 0 1 1-1.393-1.434L5.137 6.5.794 2.277A1 1 0 0 1 .774.863z'/%3E%3C/svg%3E"), e-resize;
+  }
+}
+
+.iconRedesigned {
+  width: 8px;
+  height: 12px;
+  padding: 16px;
+  fill: var(--icon-redesigned);
+
+  .sidebarToggleRedesigned:hover & {
+    opacity: 0;
+  }
+}
