--- a/src/shared/layouts/MainLayout/MainLayout.module.scss
+++ b/src/shared/layouts/MainLayout/MainLayout.module.scss
@@ -2,7 +2,7 @@
   width: 100%;
   display: grid;
   grid-template-areas: "left middle right";
-  grid-template-columns: auto auto auto;
+  grid-template-columns: auto 1fr auto;
   box-sizing: border-box;
 }
 
