Updated: redesigned navbar

--- a/src/widgets/Navbar/ui/Navbar.module.scss
+++ b/src/widgets/Navbar/ui/Navbar.module.scss
@@ -10,3 +10,21 @@
 
   @include container(l);
 }
+
+// redesigned
+
+.navbarRedesigned {
+  gap: 10px;
+}
+
+.iconButton {
+  padding: 6px;
+}
+
+.addPostIcon {
+  fill: var(--icon-redesigned);
+}
+
+.user {
+  margin-left: 6px;
+}
