--- a/src/app/styles/themes/colored.scss
+++ b/src/app/styles/themes/colored.scss
@@ -21,13 +21,14 @@
   // redesigned
   --dark-bg-redesigned: #fff3d6;
   --bg-redesigned: #f0c048;
-  --light-bg-redesigned: #f2d791;
+  --light-bg-redesigned: #{$light-bg-redesigned-color};
   --text-redesigned: #1b1311;
   --hint-redesigned: #b8b2a2;
   --cancel-redesigned: #ff5e5e;
   --cancel-redesigned-rgb: #{hex-to-rgb(#ff5e5e)};
   --save-redesigned: #52fa81;
   --icon-redesigned: #4875f0;
+  --icon-redesigned-rgb: #{hex-to-rgb(#4875f0)};
   --accent-redesigned: #1d59ff;
   --accent-redesigned-rgb: #{hex-to-rgb(#1d59ff)};
 
