--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -77,3 +77,8 @@
   // z-indexes
   --modal-z-index: 10;
 }
+
+// redesigned
+$light-bg-redesigned-light: #e2eef1;
+$light-bg-redesigned-dark: #151c1f;
+$light-bg-redesigned-color: #f2d791;
