--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -13,13 +13,14 @@
   // redesigned
   --dark-bg-redesigned: #090f11;
   --bg-redesigned: #0c1214;
-  --light-bg-redesigned: #151c1f;
+  --light-bg-redesigned: #{$light-bg-redesigned-dark};
   --text-redesigned: #dbdbdb;
   --hint-redesigned: #555;
   --cancel-redesigned: #d95757;
   --cancel-redesigned-rgba: #{hex-to-rgb(#d95757)};
   --save-redesigned: #6cd98b;
   --icon-redesigned: #74a2b2;
+  --icon-redesigned-rgb: #{hex-to-rgb(#74a2b2)};
   --accent-redesigned: #5ed3f3;
   --accent-redesigned-rgb: #{hex-to-rgb(#5ed3f3)};
 
