--- a/src/app/styles/themes/light.scss
+++ b/src/app/styles/themes/light.scss
@@ -11,15 +11,18 @@
   --sidebar-bg: var(--inverted-bg-color);
 
   // redesigned
+
   --dark-bg-redesigned: #fff;
   --bg-redesigned: #eff5f6;
-  --light-bg-redesigned: #e2eef1;
+  --light-bg-redesigned: #{$light-bg-redesigned-light};
+  --light-bg-redesigned-rgb: #{hex-to-rgb(#e2eef1)};
   --text-redesigned: #141c1f;
   --hint-redesigned: #adbcc0;
   --cancel-redesigned: #f77;
   --cancel-redesigned-rgb: #{hex-to-rgb(#f77)};
   --save-redesigned: #62de85;
   --icon-redesigned: #5ed3f3;
+  --icon-redesigned-rgb: #{hex-to-rgb(#5ed3f3)};
   --accent-redesigned: #00c8ff;
   --accent-redesigned-rgb: #{hex-to-rgb(#00c8ff)};
 
