--- a/src/shared/ui/redesigned/Text/Text.module.scss
+++ b/src/shared/ui/redesigned/Text/Text.module.scss
@@ -1,5 +1,5 @@
 .outer {
-  font-family: var(--font-family-secondary);
+  font-family: var(--font-family-main-redesigned);
   letter-spacing: 0;
 }
 
