--- a/src/shared/ui/redesigned/Popups/ui/ListBox/ListBox.module.scss
+++ b/src/shared/ui/redesigned/Popups/ui/ListBox/ListBox.module.scss
@@ -12,71 +12,59 @@
 .select {
   position: relative;
   width: 100%;
-  font-size: 14px;
   line-height: 24px;
 }
 
 .btn {
   position: relative;
-  width: 100%;
-  padding: 14px 52px 14px 16px;
-  font-weight: bold;
-  font-size: 14px;
-  line-height: 20px;
-  text-align: left;
+  padding: 8px 56px 8px 16px;
+  white-space: nowrap;
+  line-height: 22px;
   box-sizing: border-box;
-  border: 2px solid var(--devider-color);
-  border-radius: 12px;
-  background-color: transparent;
+  border: 0;
+  border-radius: 34px;
+  background-color: var(--light-bg-redesigned);
+}
 
-  &::before {
-    content: "";
-    position: absolute;
-    right: 8px;
-    top: 50%;
-    width: 28px;
-    height: 28px;
-    margin-top: -16px;
-    border: 2px solid var(--devider-color);
-    border-radius: 50%;
-  }
-
-  &::after {
-    content: "";
-    position: absolute;
-    top: 50%;
-    margin-top: -12px;
-    right: 12px;
-    width: 24px;
-    height: 24px;
-    background: url("@/shared/assets/icons/ArrowDownLine.svg") center/cover no-repeat;
-  }
+.arrow {
+  position: absolute;
+  top: 50%;
+  margin-top: -4px;
+  right: 16px;
+  width: 10px;
+  height: 10px;
+  object-fit: contain;
+  fill: var(--hint-redesigned);
 }
 
 .options {
   min-width: 100%;
   margin: 0;
-  padding: 8px;
+  padding: 0;
   list-style: none;
-  border: 2px solid var(--devider-color);
-  box-shadow: 0 64px 64px -48px rgba(#1f2f46, 0.12);
+  box-shadow: 0 3px 10px rgba(#1037a3, 0.3);
 }
 
 .option {
-  padding: 8px 10px;
+  padding: 5px 16px;
   white-space: nowrap;
   outline: none;
-  border-radius: 8px;
+
+  &:first-of-type {
+    padding-top: 13px;
+  }
+
+  &:last-of-type {
+    padding-bottom: 13px;
+  }
 
   &_active {
-    color: var(--bg-color);
-    background: var(--inverted-bg-color);
+    background: var(--light-bg-redesigned);
     cursor: pointer;
   }
 
   &_selected {
-    color: inherit;
-    background: var(--neutral-color-7);
+    background: var(--light-bg-redesigned);
   }
 
   &_disabled {
