--- a/src/shared/ui/redesigned/Popups/styles/popup.module.scss
+++ b/src/shared/ui/redesigned/Popups/styles/popup.module.scss
@@ -33,9 +33,9 @@
   outline: none;
   border-radius: 12px;
   background: var(--bg-redesigned);
-  box-sizing: border-box;
   box-shadow: 0 16px 64px -16px rgba(16, 55, 163, 60%);
   border: 1px solid var(--accent-redesigned);
+  overflow: hidden;
 }
 
 .title {
