--- a/src/shared/ui/redesigned/Popups/ui/ListBox/ListBox.module.scss
+++ b/src/shared/ui/redesigned/Popups/ui/ListBox/ListBox.module.scss
@@ -1,36 +1,39 @@
 .label {
-  position: relative;
-  padding-left: 2px;
-  margin-bottom: 1em;
-  font-weight: bold;
-  font-size: 12px;
-  line-height: 1;
-  text-transform: uppercase;
-  color: var(--neutral-color-5);
+  white-space: nowrap;
+  text-align: left;
+  line-height: 1.375;
 }
 
 .select {
   position: relative;
-  width: 100%;
   line-height: 24px;
 }
 
 .btn {
   position: relative;
-  padding: 8px 56px 8px 16px;
   white-space: nowrap;
   line-height: 22px;
   box-sizing: border-box;
   border: 0;
   border-radius: 34px;
   background-color: var(--light-bg-redesigned);
+
+  &_size {
+    &_m {
+      padding: 5px 56px 5px 16px;
+    }
+
+    &_l {
+      padding: 8px 56px 8px 16px;
+    }
+  }
 }
 
 .arrow {
   position: absolute;
   top: 50%;
-  margin-top: -4px;
   right: 16px;
+  margin-top: -4px;
   width: 10px;
   height: 10px;
   object-fit: contain;
