--- a/src/shared/ui/redesigned/Button/Button.module.scss
+++ b/src/shared/ui/redesigned/Button/Button.module.scss
@@ -28,12 +28,6 @@
 
 .primary {
   background: var(--light-bg-redesigned);
-
-  &:hover {
-    &:not(.button_disabled) {
-      background: darken($light-bg-redesigned-light, 10%);
-    }
-  }
 }
 
 .iconOnly {
@@ -66,16 +60,7 @@
 }
 
 .outlined {
-  color: var(--inverted-bg-color);
   box-shadow: inset 0 0 0 2px var(--devider-color);
-
-  &:hover {
-    &:not(.button_disabled) {
-      color: var(--bg-color);
-      box-shadow: inset 0 0 0 2px var(--neutral-color-2);
-      background: var(--neutral-color-2);
-    }
-  }
 }
 
 .red_outlined {
@@ -118,9 +103,13 @@
   }
 }
 
+.primary,
 .clearWithPaddings {
-  &:hover {
-    box-shadow: inset 0 0 0 2px var(--light-bg-redesigned);
+  &:not(.button_disabled) {
+    &:hover {
+      background: none;
+      box-shadow: inset 0 0 0 2px var(--light-bg-redesigned);
+    }
   }
 }
 
