--- a/src/entities/Profile/ui/ProfileCard/ProfileCard.module.scss
+++ b/src/entities/Profile/ui/ProfileCard/ProfileCard.module.scss
@@ -1,15 +1,1 @@
-.avatar {
-  margin-bottom: 32px;
-}
-
-.form {
-  gap: 32px 0;
-}
-
-.input {
-  width: calc(50% - 12px);
-
-  &:last-child {
-    margin-bottom: 0;
-  }
-}
+// .outer {}
