--- a/src/shared/ui/redesigned/Button/Button.module.scss
+++ b/src/shared/ui/redesigned/Button/Button.module.scss
@@ -3,11 +3,14 @@
   align-items: center;
   justify-content: center;
   margin: 0;
+  color: inherit;
+  text-decoration: none;
   cursor: pointer;
   background: none;
   border: 0;
   box-sizing: border-box;
   white-space: nowrap;
+  transition: color 0.2s ease-in-out, background 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
 
   &_disabled {
     opacity: 0.5;
@@ -60,16 +63,26 @@
 }
 
 .outlined {
-  box-shadow: inset 0 0 0 2px var(--devider-color);
+  box-shadow: inset 0 0 0 1px var(--icon-redesigned);
+
+  &:hover {
+    box-shadow: inset 0 0 0 1px var(--icon-redesigned), 0 3px 10px rgba(#1037a3, 0.3);
+  }
 }
 
 .red_outlined {
-  color: var(--error-color);
-  box-shadow: inset 0 0 0 2px var(--error-color);
+  box-shadow: inset 0 0 0 1px var(--cancel-redesigned);
 
   &:hover {
-    color: var(--primary-color-font);
-    background: var(--error-color);
+    box-shadow: inset 0 0 0 1px var(--cancel-redesigned), 0 3px 10px rgba(var(--cancel-redesigned-rgb), 0.3);
+  }
+}
+
+.green_outlined {
+  box-shadow: inset 0 0 0 1px var(--save-redesigned);
+
+  &:hover {
+    box-shadow: inset 0 0 0 1px var(--save-redesigned), 0 3px 10px rgba(var(--save-redesigned-rgb), 0.3);
   }
 }
 
@@ -79,7 +92,7 @@
   }
 
   &_square {
-    border-radius: 0;
+    border-radius: 16px;
   }
 
   &_circle {
