Updated: css variables

--- a/src/app/styles/themes/colored.scss
+++ b/src/app/styles/themes/colored.scss
@@ -27,6 +27,7 @@
   --cancel-redesigned: #ff5e5e;
   --cancel-redesigned-rgb: #{hex-to-rgb(#ff5e5e)};
   --save-redesigned: #52fa81;
+  --save-redesigned-rgb: #{hex-to-rgb(#52fa81)};
   --icon-redesigned: #4875f0;
   --icon-redesigned-rgb: #{hex-to-rgb(#4875f0)};
   --accent-redesigned: #1d59ff;
