--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -19,6 +19,7 @@
   --cancel-redesigned: #d95757;
   --cancel-redesigned-rgba: #{hex-to-rgb(#d95757)};
   --save-redesigned: #6cd98b;
+  --save-redesigned-rgb: #{hex-to-rgb(#6cd98b)};
   --icon-redesigned: #74a2b2;
   --icon-redesigned-rgb: #{hex-to-rgb(#74a2b2)};
   --accent-redesigned: #5ed3f3;
