--- a/src/app/styles/themes/light.scss
+++ b/src/app/styles/themes/light.scss
@@ -21,6 +21,7 @@
   --cancel-redesigned: #f77;
   --cancel-redesigned-rgb: #{hex-to-rgb(#f77)};
   --save-redesigned: #62de85;
+  --save-redesigned-rgb: #{hex-to-rgb(#62de85)};
   --icon-redesigned: #5ed3f3;
   --icon-redesigned-rgb: #{hex-to-rgb(#5ed3f3)};
   --accent-redesigned: #00c8ff;
