--- a/src/entities/Article/ui/ArticleListItem/ArticleListItem.module.scss
+++ b/src/entities/Article/ui/ArticleListItem/ArticleListItem.module.scss
@@ -1,179 +1,1 @@
-.outer {
-  &_grid {
-    width: 22.3%; // 250
-
-    &:nth-child(6n+1),
-    &:nth-child(6n+6) {
-      width: 48.2%; // 540
-    }
-  }
-
-  &_list {
-    width: 100%;
-    padding: 8px;
-  }
-}
-
-.header {
-  margin-bottom: 16px;
-  padding: 0 4px;
-}
-
-.user {
-  display: flex;
-  align-items: center;
-}
-
-.avatar {
-  margin-right: 10px;
-}
-
-.pic_outer {
-  position: relative;
-  width: 100%;
-  height: 300px;
-  border-radius: 16px;
-  overflow: hidden;
-  background: var(--skeleton-bg);
-  isolation: isolate;
-
-  &_skeleton {
-    background: none;
-  }
-
-  .outer_list & {
-    margin-bottom: 24px;
-  }
-
-  .outer:hover & {
-    background: var(--primary-color);
-  }
-}
-
-.pic {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  transition: transform 0.2s ease-in-out;
-
-  .outer:hover & {
-    transform: scale(1.1);
-    opacity: 0.4;
-  }
-}
-
-.date {
-  .outer_grid & {
-    position: absolute;
-    top: 14px;
-    right: 16px;
-    color: var(--bg-color);
-    opacity: 0;
-    pointer-events: none;
-    transition: opacity 0.2s ease-in-out;
-  }
-
-  .outer_grid:hover & {
-    opacity: 1;
-    pointer-events: auto;
-  }
-}
-
-.info {
-  margin: 12px 4px;
-}
-
-.additional {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  box-sizing: border-box;
-  margin-bottom: 8px;
-
-  .outer_list & {
-    margin-bottom: 1em;
-  }
-}
-
-.categories {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-  display: flex;
-  align-items: center;
-  overflow: hidden;
-  text-transform: lowercase;
-}
-
-.category {
-  position: relative;
-  display: inline-block;
-  padding-right: 6px;
-  margin-right: 6px;
-  white-space: nowrap;
-
-  &::after {
-    content: "";
-    position: absolute;
-    top: 50%;
-    right: 0;
-    width: 2px;
-    height: 2px;
-    margin-top: -1px;
-    background: var(--inverted-bg-color);
-    border-radius: 50%;
-  }
-
-  &_last {
-    padding-right: 0;
-    margin-right: 0;
-
-    &::after {
-      display: none;
-    }
-  }
-}
-
-.views {
-  display: flex;
-  flex-shrink: 0;
-  align-items: center;
-  margin: 0 0 0 16px;
-}
-
-.views_icon {
-  width: 14px;
-  height: 14px;
-  margin-right: 8px;
-}
-
-.title {
-  .outer_grid:nth-child(6n+1) &,
-  .outer_grid:nth-child(6n+6) & {
-    max-width: 460px;
-  }
-}
-
-.footer {
-  padding: 0 4px;
-}
-
-.content {
-  margin: 1.5em 0 0;
-
-  p {
-    font-size: 14px;
-
-    &:last-child {
-      margin-bottom: 0;
-    }
-  }
-}
-
-.actions {
-  display: flex;
-  align-items: flex-end;
-  justify-content: space-between;
-  margin-top: 24px;
-}
+// .outer {}
