--- a/src/entities/Article/ui/ArticleList/ArticleList.module.scss
+++ b/src/entities/Article/ui/ArticleList/ArticleList.module.scss
@@ -21,11 +21,13 @@
     width: 100%;
     display: flex;
     flex-wrap: wrap;
-    gap: 64px 3.57%;
-    padding-bottom: 16px;
 
     &_list {
       gap: 16px 0;
+    }
+
+    &_grid {
+      gap: 16px;
     }
   }
 }
