--- a/src/entities/Article/ui/ArticleListItem/ArticleListItemRedesigned/ArticleListItemRedesigned.module.scss
+++ b/src/entities/Article/ui/ArticleListItem/ArticleListItemRedesigned/ArticleListItemRedesigned.module.scss
@@ -1,11 +1,8 @@
 .outer {
   &_grid {
-    width: 22.3%; // 250
-
-    &:nth-child(6n+1),
-    &:nth-child(6n+6) {
-      width: 48.2%; // 540
-    }
+    display: flex;
+    flex-direction: column;
+    width: calc(33.33% - 11px);
   }
 
   &_list {
@@ -19,10 +16,10 @@
   }
 }
 
-// todo удалить возможно
 .user {
-  display: flex;
-  align-items: center;
+  .outer_grid & {
+    margin-top: 8px;
+  }
 }
 
 .avatar {
@@ -66,37 +63,33 @@
   }
 }
 
-.date {
+.info {
   .outer_grid & {
-    position: absolute;
-    top: 14px;
-    right: 16px;
-    color: var(--bg-color);
-    opacity: 0;
-    pointer-events: none;
-    transition: opacity 0.2s ease-in-out;
-  }
-
-  .outer_grid:hover & {
-    opacity: 1;
-    pointer-events: auto;
+    flex-grow: 1;
+    padding: 12px 12px 16px;
   }
 }
 
-.info {
-  margin: 12px 4px;
+.title {
+  .outer_grid & {
+    margin-bottom: auto;
+  }
 }
 
 .additional {
   width: 100%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
   box-sizing: border-box;
-  margin-bottom: 8px;
 
   .outer_list & {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     margin-bottom: 1em;
+  }
+
+  .outer_grid & {
+    flex-shrink: 0;
+    margin-top: 8px;
   }
 }
 
@@ -147,9 +140,9 @@
 }
 
 .views_icon {
-  width: 22px;
-  height: 22px;
-  margin-right: 12px;
+  width: 20px;
+  height: 20px;
+  margin-right: 8px;
 }
 
 .content {
