--- a/src/shared/ui/redesigned/Card/Card.module.scss
+++ b/src/shared/ui/redesigned/Card/Card.module.scss
@@ -1,11 +1,17 @@
 .outer {
-  padding: 24px;
+  box-sizing: border-box;
   color: inherit;
   text-decoration: none;
   border-radius: 32px;
+  overflow: hidden;
   background: var(--dark-bg-redesigned);
+  isolation: isolate;
 
   &_clickable {
     cursor: pointer;
+  }
+
+  &_withPaddings {
+    padding: 24px;
   }
 }
