--- a/src/shared/ui/redesigned/Overlay/Overlay.module.scss
+++ b/src/shared/ui/redesigned/Overlay/Overlay.module.scss
@@ -1,4 +1,5 @@
-.overlay {
+.overlay,
+.overlayRedesigned {
   position: absolute;
   top: 0;
   left: 0;
@@ -6,20 +7,20 @@
   height: 100%;
 }
 
-:global(.app_theme_light) {
-  .overlay {
+.overlay {
+  :global(.app_theme_light) & {
     background: rgba(var(--inverted-bg-color-rgb), 0.9);
   }
-}
 
-:global(.app_theme_dark) {
-  .overlay {
+  :global(.app_theme_dark) & {
+    background: rgba(var(--neutral-color-2-rgb), 0.9);
+  }
+
+  :global(.app_theme_colored) & {
     background: rgba(var(--neutral-color-2-rgb), 0.9);
   }
 }
 
-:global(.app_theme_colored) {
-  .overlay {
-    background: rgba(var(--neutral-color-2-rgb), 0.9);
-  }
+.overlayRedesigned {
+  background: rgba(var(--bg-redesigned-rgb), 0.9);
 }
