Added: Overlay toggle feature

--- a/src/shared/ui/redesigned/Overlay/Overlay.module.scss
+++ b/src/shared/ui/redesigned/Overlay/Overlay.module.scss
@@ -22,5 +22,5 @@
 }
 
 .overlayRedesigned {
-  background: rgba(var(--bg-redesigned-rgb), 0.9);
+  background: rgba(var(--light-bg-redesigned-rgb), 0.9);
 }
