Redesigned: login modal

--- a/src/features/AuthByUserName/ui/LoginForm/LoginForm.module.scss
+++ b/src/features/AuthByUserName/ui/LoginForm/LoginForm.module.scss
@@ -10,7 +10,6 @@
 }
 
 .input {
-  width: 100%;
   margin-bottom: 32px;
 }
 
@@ -20,4 +19,11 @@
 
 .error {
   margin-bottom: 32px;
+}
+
+.redesigned {
+  &_input {
+    width: 100%;
+    margin-bottom: 16px;
+  }
 }
