Fixed: new modal

--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -9,6 +9,10 @@ body {
   min-width: 1200px;
   letter-spacing: 0.03em;
   -webkit-font-smoothing: antialiased;
+
+  &.modal_opened {
+    overflow: hidden;
+  }
 }
 
 .app {
