--- a/src/features/AddCommentForm/ui/AddCommentForm/AddCommentForm.module.scss
+++ b/src/features/AddCommentForm/ui/AddCommentForm/AddCommentForm.module.scss
@@ -11,3 +11,13 @@
   font-weight: 400 !important;
   border-width: 1px !important;
 }
+
+.redesigned {
+  &_input {
+    flex-grow: 1;
+  }
+
+  &_btn {
+    flex-shrink: 0;
+  }
+}
