--- a/src/shared/ui/redesigned/Button/Button.module.scss
+++ b/src/shared/ui/redesigned/Button/Button.module.scss
@@ -62,6 +62,16 @@
   }
 }
 
+.width {
+  &_content {
+    width: fit-content;
+  }
+
+  &_full {
+    width: 100%;
+  }
+}
+
 .outlined {
   box-shadow: inset 0 0 0 1px var(--icon-redesigned);
 
