Updated: new button shapes

--- a/src/shared/ui/redesigned/Button/Button.module.scss
+++ b/src/shared/ui/redesigned/Button/Button.module.scss
@@ -101,12 +101,8 @@
     border-radius: 90px;
   }
 
-  &_square {
+  &_partial_rounded {
     border-radius: 16px;
-  }
-
-  &_circle {
-    border-radius: 50%;
   }
 }
 
