Fixed: storybook (added FeatureFlagsDecorator, TranslationsDecorator)

--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -14,7 +14,9 @@ body {
     overflow: hidden;
   }
 
-  @include scrollbar-redesigned;
+  &:not(.app) {
+    @include scrollbar-redesigned;
+  }
 }
 
 .app {
