--- a/src/shared/ui/redesigned/Popups/ui/ListBox/ListBox.module.scss
+++ b/src/shared/ui/redesigned/Popups/ui/ListBox/ListBox.module.scss
@@ -12,6 +12,7 @@
 .btn {
   position: relative;
   white-space: nowrap;
+  font-size: 1em;
   line-height: 22px;
   box-sizing: border-box;
   border: 0;
